# OpenKalman

./: .gitignore  CMakeLists.txt  README.md
OpenKalman/coefficient-types/: Angle.hpp  Axis.hpp  CMakeLists.txt  Circle.hpp  Coefficients.hpp  Distance.hpp  DynamicCoefficients.hpp  Inclination.hpp  Polar.hpp  Spherical.hpp  coefficient-types.hpp  coefficients.hpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  doxygen_layout.xml  doxygen_sqlite3.db  index.html  kalmandoxy_layout.xml
docs/html/: _angle_8h_source.html  _angle_8hpp_source.html  _array_utils_8h_source.html  _axis_8h_source.html  _axis_8hpp_source.html  _circle_8h_source.html  _coefficients_8h_source.html  _coefficients_8hpp_source.html  _continuous_property_particle_distribution_8h_source.html  _continuous_property_particle_distribution_8hpp_source.html  _convert_base_matrix_8h_source.html  _convert_base_matrix_8hpp_source.html  _covariance_8h_source.html  _covariance_8hpp_source.html  _covariance_base_8h_source.html  _covariance_base_8hpp_source.html  _covariance_base_base_8h_source.html  _covariance_base_base_8hpp_source.html  _covariance_overloads_8h_source.html  _cubature_points_8h_source.html  _cubature_points_8hpp_source.html  _diagonal_matrix_8hpp_source.html  _diagonal_matrix_8test_8cpp_source.html  _distance_8h_source.html  _distance_8hpp_source.html  _eigen3_8h_source.html  _eigen3_covariance_base_8hpp_source.html  _eigen3_matrix_base_8hpp_source.html  _eigen_cholesky_8h_source.html  _eigen_covariance_base_8h_source.html  _eigen_diagonal_8h_source.html  _eigen_evaluators_8h_source.html  _eigen_forward_declarations_8h_source.html  _eigen_matrix_base_8h_source.html  _eigen_matrix_overloads_8h_source.html  _eigen_matrix_traits_8h_source.html  _eigen_self_adjoint_matrix_8h_source.html  _eigen_special_matrix_overloads_8h_source.html  _eigen_traits_8h_source.html  _eigen_triangular_matrix_8h_source.html  (+1460 more)
test/: CMakeLists.txt  independent-noise.h  tests.h  transformations.h
test/MonteCarlo-tests/: MonteCarlo-tests.2x1.cpp  MonteCarlo-tests.2x2.cpp  MonteCarlo-tests.h  MonteCarlo-tests.main.cpp
test/covariance-tests/: covariance_tests.cpp  covariance_tests.h  tests-covariance-ops.cpp  tests-covariance-refs.cpp  tests-covariance.cpp  tests-distributions.cpp  tests-sqrt-covariance-ops.cpp  tests-sqrt-covariance.cpp
test/kalman-tests/: kalman-tests.2x2.CT.Add.cpp  kalman-tests.2x2.CT.Aug.cpp  kalman-tests.2x2.UT.spher.Add.cpp  kalman-tests.2x2.linear.cpp  kalman-tests.2x2.update.cpp  kalman-tests.artillery.cpp  kalman-tests.h  kalman-tests.main.cpp  kalman-tests.radar.cpp  kalman-tests.radial.CT.Aug.cpp  kalman-tests.rotation.2D.cpp  kalman-tests.rotation.3D.cpp
test/linear-tests/: linear-tests.2x2.UT.cpp  linear-tests.2x2.cpp  linear-tests.2x2.sample.cpp  linear-tests.2x2.sqrt.cpp  linear-tests.2x3.linear.cpp  linear-tests.2x3.sample.cpp  linear-tests.3x2.sample.cpp  linear-tests.4x2.cubature.cpp  linear-tests.4x2.spherical.cpp  linear-tests.4x2.symmetric.cpp  linear-tests.4x3.sample.cpp  linear-tests.8x3.cubature.cpp  linear-tests.8x3.spherical.cpp  linear-tests.8x3.symmetric.cpp  linear-tests.MCT.cpp  linear-tests.h  linear-tests.identity.cpp  linear-tests.main.cpp
test/matrix-tests/: matrix_tests.cpp  matrix_tests.h  tests-FromEuclideanExpr.cpp  tests-ToEuclideanExpr.cpp  tests-coefficients.cpp  tests-diagonal.cpp  tests-matrix.cpp  tests-self-adjoint.cpp  tests-triangular.cpp
test/nonlinear-sqrt-tests/: nonlinear-sqrt-tests.CT.cpp  nonlinear-sqrt-tests.ST.h  nonlinear-sqrt-tests.TT.cpp  nonlinear-sqrt-tests.UT.spher.cpp  nonlinear-sqrt-tests.UT.symm.cpp  nonlinear-sqrt-tests.h  nonlinear-sqrt-tests.main.cpp
test/nonlinear-tests/: nonlinear-tests.2x1.CT.cpp  nonlinear-tests.2x1.TT.cpp  nonlinear-tests.2x1.UT.cpp  nonlinear-tests.2x2.CT.cpp  nonlinear-tests.2x2.MCT.cpp  nonlinear-tests.2x2.TT.cpp  nonlinear-tests.2x2.UT.cpp  nonlinear-tests.h  nonlinear-tests.main.cpp
test/transform-linear-tests/: tests-linear-angle.cpp  tests-linear-axis.cpp  tests-linearized-add.cpp  tests-linearized-aug.cpp  transform-linear-tests.h  transform-linear-tests.linear.angle.cpp  transform-linear-tests.linear.cpp  transform-linear-tests.linearized.add.cpp  transform-linear-tests.linearized.aug.cpp  transform-linear-tests.main.cpp
test/transform-nonlinear-tests/: tests-rev-rot-invariance.cpp  tests-rot-invariance.cpp  tests-sample-angle.cpp  tests-sample-aug.cpp  tests-sample.cpp  transform-nonlinear-tests.h  transform-nonlinear-tests.main.cpp  transform-nonlinear-tests.sample.aug.angle.cpp  transform-nonlinear-tests.sample.aug.cpp  transform-nonlinear-tests.sample.cpp
test/transformation-tests/: tests-general.cpp  tests-linear-fd.cpp  tests-linear.cpp  tests-stochastic.cpp  transformation-tests.general.cpp  transformation-tests.h  transformation-tests.linear.cpp  transformation-tests.main.cpp  transformation-tests.stochastic.cpp
test/typed-matrix-tests/: tests-distributions.cpp  tests-euclidean_mean.cpp  tests-mean.cpp  tests-typed-matrix-refs.cpp  tests-typed-matrix.cpp  typed_matrix_tests.cpp  typed_matrix_tests.h
tests/: CMakeLists.txt  test-transformations.hpp  tests.hpp
tests/covariance-tests/: covariance_tests.cpp  tests-covariance-ops.cpp  tests-covariance-refs.cpp  tests-covariance.cpp  tests-sqrt-covariance-ops.cpp  tests-sqrt-covariance.cpp
tests/covariances/: CMakeLists.txt  covariance_tests.hpp  tests-covariance-ops.cpp  tests-covariance-refs.cpp  tests-covariance.cpp  tests-sqrt-covariance-ops.cpp  tests-sqrt-covariance.cpp
tests/kalman/: CMakeLists.txt  artillery.cpp  kalman.cpp  kalman.hpp  radar.cpp  rotation.2D.cpp  rotation.3D.cpp
tests/kalman-tests/: kalman-tests.artillery.cpp  kalman-tests.hpp  kalman-tests.main.cpp  kalman-tests.radar.cpp  kalman-tests.rotation.2D.cpp  kalman-tests.rotation.3D.cpp
tests/linear-tests/: linear-tests.2x2.linear.cpp  linear-tests.2x2.sample.cpp  linear-tests.2x3.linear.cpp  linear-tests.2x3.sample.cpp  linear-tests.3x2.sample.cpp  linear-tests.4x3.sample.cpp  linear-tests.MCT.cpp  linear-tests.hpp  linear-tests.identity.cpp  linear-tests.main.cpp
(+6512 files in other folders)
